k8s/kustomization/overlays/staging/bases/server/server-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: server-ingress
  namespace: starter
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`server.staging.starter.com`)
      priority: 10
      services:
        - name: server-service
          port: 8000
  tls:
    certResolver: default
    options:
      name: server-service
